tests/snapshots/examples_guide/lambda.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/lambda.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
