tests/snapshots/examples_guide/list_basic.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/list_basic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
