tests/snapshots/examples_guide/list_comprehension.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/list_comprehension.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
