tests/snapshots/examples_guide/list_map_filter.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/list_map_filter.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
