tests/snapshots/examples_guide/map_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/map_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
