tests/snapshots/examples_guide/math_builtins.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/math_builtins.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
