tests/snapshots/examples_guide/mini_database.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/mini_database.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
