tests/snapshots/examples_guide/missing_comma_recovery.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/missing_comma_recovery.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
