tests/snapshots/examples_guide/modulo.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/modulo.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
