tests/snapshots/examples_guide/multiline_strings.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/multiline_strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
