tests/snapshots/examples_guide/non_zero_division.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/non_zero_division.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
