tests/snapshots/examples_guide/pipe_operator.snap
---
source: tests/examples/examples_guide_snapshots.rs
---
Fixture: examples/guide/pipe_operator.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
